<resources>
    <string name="app_name">chikidesk</string>
    <string name="btn_text_moldes">Moldes</string>
    <string name="btn_text_maquinas">Maquinas</string>
    <string name="btn_text_si">Si</string>
    <string name="btn_text_no">No</string>
    <string name="btn_text_delete">Eliminar</string>
    <string name="btn_text_cofiguraciones">Configuraciones</string>
    <string name="btn_text_guardar">Guardar</string>
    <string name="btn_text_actualizar">Actualizar</string>
    <string name="btn_text_reset">Reiniciar</string>
    <string name="btn_text_continue">Continuar</string>
    <string name="item_text_total_config">Total configuraciones: 0</string>
    <string name="lab_text_advertencia">¡Advertencia!</string>
    <string name="lab_text_confirm">¿Estás de acuerdo?</string>
    <string name="lab_text_maquina">Máquina</string>
    <string name="lab_text_molde">Molde</string>
    <string name="lab_text_temperaturas">Temperaturas (ºC)</string>
    <string name="lab_text_inyeccion">Inyección (Velocidad / Presión)</string>
    <string name="lab_text_reten">Retenpresión (Vel. / Pres. / Tiempo)</string>
    <string name="lab_text_plastificacion">Plastificación</string>
    <string name="lab_text_expulsor">Expulsor (Vel. / Pres. / Posicion)</string>
    <string name="lab_text_temp_ciclo">Tiempo de ciclo</string>
    <string name="lab_text_temp_enfriamento">Tiempo enfriar</string>
    <string name="lab_text_time_out">TimeOut</string>
    <string name="lab_text_material">Material utilizado</string>
    <string name="lab_text_observaciones">Observaciones aquí</string>
    <string name="header_molde_list">Listando moldes</string>
    <string name="header_molde_delete">Elimando molde</string>
    <string name="header_molde_update">Actualizando molde</string>
    <string name="header_molde_form">Creando nuevo molde</string>
    <string name="header_maquina_list">Listando maquinas</string>
    <string name="header_maquina_update">Actualizando maquina</string>
    <string name="header_maquina_form">Creando Nueva Maquina</string>
    <string name="header_maquina_delete">Elimando maquina</string>
    <string name="header_config_list">Listando configuraciones</string>
    <string name="header_config_form">Creando Configuración</string>
    <string name="header_config_show">Mostrando Configuración</string>
    <string name="header_config_update">Actualizando Configuración</string>
    <string name="header_select_maquina">Selecciona maquina a configurar</string>
    <string name="header_select_molde">Selecciona molde a configurar</string>
    <string name="header_select_config">Selecciona configuración</string>
    <string name="property_nombre">Nombre</string>
    <string name="property_referencia">Referencia</string>
    <string name="property_descripcion">Descripción</string>
    <string name="property_velocidad">Velocidad</string>
    <string name="property_tiempo">Tiempo</string>
    <string name="property_presion">Presion</string>
    <string name="property_temperatura1">T1</string>
    <string name="property_temperatura2">T2</string>
    <string name="property_temperatura3">T3</string>
    <string name="property_temperatura4">T4</string>
    <string name="property_ciclo">Ciclo</string>
    <string name="property_ciclo_real">Ciclo real</string>
    <string name="property_tiempo_enfriar">Tiempo enfriar</string>
    <string name="property_material">Material</string>
    <string name="property_iny_vel1">V1</string>
    <string name="property_iny_vel2">V2</string>
    <string name="property_iny_vel3">V3</string>
    <string name="property_iny_vel4">V4</string>
    <string name="property_iny_vel5">V5</string>
    <string name="property_iny_pre1">P1</string>
    <string name="property_iny_pre2">P2</string>
    <string name="property_iny_pre3">P3</string>
    <string name="property_iny_pre4">P4</string>
    <string name="property_iny_pre5">P5</string>
    <string name="property_exp_vel1">Vel 1</string>
    <string name="property_exp_vel2">Vel 2</string>
    <string name="property_exp_pre1">Pres 1</string>
    <string name="property_exp_pre2">Pres 2</string>
    <string name="property_exp_pos1">Pos 1</string>
    <string name="property_exp_pos2">Pos 2</string>
    <string name="msn_ok">OK</string>
    <string name="msn_duplicate_property_name">Ya hay un molde con este Nombre</string>
    <string name="msn_duplicate_property_ref">Ya hay un molde con esta Referencia</string>
    <string name="msn_img_select">Selecciona imagen</string>
    <string name="tot_upd_molde">Molde Actualizado</string>
    <string name="tot_new_molde">Molde creado</string>
    <string name="tot_del_molde">Molde eliminado</string>
    <string name="tot_new_maquina">Maquina creada</string>
    <string name="tot_upd_maquina">Maquina Actualizada</string>
    <string name="tot_del_maquina">Maquina Eliminada</string>
    <string name="tot_new_config">Configuracion creada.</string>
    <string name="tot_upd_config">Configuracion actualizada.</string>
    <string name="msn_img">img</string>
    <string name="msn_delete1">Se ELIMINARAN</string>
    <string name="msn_delete2">configuracion/es.</string>
    <string name="msn_delete3">\n\nCuando eliminamos un molde o una maquina, también se eliminan las configuraciones donde aparezcan.</string>
    <string name="msn_default_value">Los campos en rojo tomarán valores por defecto.</string>
    <string name="msn_update_empty">No puede haber campos vacíos al actualizar.\nLos campos en rojo deben tener valor.</string>
    <string name="dialog_empty_fields">Campos Vacíos</string>
    <string name="alert_confirm">Si estoy de acuerdo.</string>
    <string name="alert_ok">OK</string>
    <string name="alert_title_error">ERROR</string>
    <string name="alert_new_molde">Fallo inesperado al crear nuevo molde./nIntentelo de nuevo más tarde.</string>
    <string name="tag_dao_error">Error en Dao</string>
    <string name="tag_img_error">Error en Img</string>
    <string name="log_new_molde">MoldeDao.insert</string>
    <string name="log_del_molde">MoldeDao.delete</string>
    <string name="log_new_maquina">MaquinaDao.insert</string>
    <string name="log_del_maquina">MaquinaDao.delete</string>
    <string name="log_upd_maquina">MaquinaDao.update</string>
    <string name="log_del_img">Imagen eliminada.</string>
    <string name="log_del_img_molde">Error eliminar imagen molde</string>
    <string name="log_del_img_maquina">Error eliminar imagen maquina</string>
    <string name="cont_desc_fab_nav_update">Fab nav editar</string>
    <string name="cont_desc_fab_nav_delete">Fab nav eliminar</string>
    <string name="cont_desc_fab_nav_back">Fab nav atrás</string>
    <string name="cont_desc_fab_nav_home">Fab nav home</string>
    <string name="cont_desc_fab_select_img">Fab select imagen</string>
    <string name="cont_desc_fab_delete_img">Fab delete imagen</string>
    <string name="cont_desc_fab_new_molde">Fab new molde</string>
    <string name="cont_desc_fab_new_maquina">Fab new maquina</string>
    <string name="cont_desc_fab_new_config">Fab new Config</string>
    <string name="cont_desc_img_molde">Contenedor imageView molde</string>
    <string name="cont_desc_img_maquina">Contenedor imageView maquina</string>
    <string name="cont_desc_rcv_molde">Contenedor recycledView molde</string>
    <string name="cont_desc_rcv_maquina">Contenedor recycledView maquina</string>
    <string name="cont_desc_rcv_config">Contenedor recycledView config</string>
    <string name="cont_desc_rcv_select_maquina">Contenedor recycledView selectMaquina</string>
    <string name="cont_desc_rcv_select_molde">Contenedor recycledView selectMolde</string>
    <string name="cont_desc_rcv_select_config">Contenedor recycledView selectConfig</string>
</resources>