<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutMoldeList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    android:background="@drawable/bg_main">

    <TextView
        android:id="@+id/txvMoldeListHeader"
        android:text="@string/header_molde_list"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/onAllAppHeader"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvMoldeList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="72dp"
        android:contentDescription="@string/cont_desc_rcv_molde"
        app:layout_constraintTop_toBottomOf="@id/txvMoldeListHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clipToPadding="false" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNavHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_home"
        android:contentDescription="@string/cont_desc_fab_nav_home"
        app:tint="@color/gris1"
        app:backgroundTint="@color/verde3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNewMolde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/cont_desc_fab_new_molde"
        app:tint="@color/gris1"
        app:backgroundTint="@color/verde3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>