<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutSelectMolde"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_x1"
    android:background="@drawable/bg_main">

    <TextView
        android:id="@+id/txvListMoldeConfigHeader"
        android:text="@string/header_select_molde"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/headers"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvSelectMolde"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_x2"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/paddingBottom_rcv"
        android:contentDescription="@string/cont_desc_rcv_select_molde"
        app:layout_constraintTop_toBottomOf="@id/txvListMoldeConfigHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSelectMoldeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_x3"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/cont_desc_fab_nav_back"
        app:tint="@color/fab_fore_gre108"
        app:backgroundTint="@color/fab_back_gre101"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSelectMoldeHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_x3"
        android:src="@drawable/ic_home"
        android:contentDescription="@string/cont_desc_fab_nav_home"
        app:tint="@color/fab_fore_gre108"
        app:backgroundTint="@color/fab_back_gre101"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>