<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutMaquinaShow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_x1"
    android:background="@drawable/bg_main">

    <ImageView
        android:id="@+id/imgMaquinaShow"
        android:layout_width="@dimen/widthImgVie"
        android:layout_height="@dimen/heightImgVie"
        android:layout_marginTop="@dimen/margin_x6"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:background="@drawable/imgview_rounded"
        android:contentDescription="@string/cont_desc_img_maquina"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMaquinaShowDeleteImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_x2"
        android:src="@drawable/ic_del1"
        android:contentDescription="@string/cont_desc_fab_delete_img"
        app:tint="@color/fab_fore_gre108"
        app:backgroundTint="@color/fab_back_gre101"
        app:layout_constraintTop_toBottomOf="@id/imgMaquinaShow"
        app:layout_constraintStart_toStartOf="@id/imgMaquinaShow" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMaquinaShowSelectImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_x2"
        android:src="@drawable/ic_img"
        android:contentDescription="@string/cont_desc_fab_select_img"
        app:tint="@color/fab_fore_gre108"
        app:backgroundTint="@color/fab_back_gre101"
        app:layout_constraintTop_toBottomOf="@id/imgMaquinaShow"
        app:layout_constraintEnd_toEndOf="@id/imgMaquinaShow" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMaquinaShowNombre"
        android:layout_width="@dimen/widthTil_x5"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_x3"
        android:hint="@string/property_nombre"
        android:autofillHints=""
        android:textColorHint="@color/lab_fore_gre106"
        app:hintTextAppearance="@style/MyHintAppearance"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="none"
        app:layout_constraintTop_toBottomOf="@+id/fabMaquinaShowSelectImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtMaquinaShowNombre"
            android:padding="0dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            style="@style/editTextOnlyRead" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMaquinaShowRef"
        android:layout_width="@dimen/widthTil_x5"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_x3"
        android:hint="@string/property_referencia"
        android:autofillHints=""
        android:textColorHint="@color/lab_fore_gre106"
        app:hintTextAppearance="@style/MyHintAppearance"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="none"
        app:layout_constraintTop_toBottomOf="@+id/tilMaquinaShowNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtMaquinaShowRef"
            android:padding="0dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            style="@style/editTextOnlyRead" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMaquinaShowDesc"
        android:layout_width="@dimen/widthTil_x5"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_x6"
        android:hint="@string/property_descripcion"
        android:autofillHints=""
        android:textColorHint="@color/lab_fore_gre106"
        app:hintTextAppearance="@style/MyHintAppearance"
        app:boxBackgroundMode="none"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/tilMaquinaShowRef"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtMaquinaShowDesc"
            android:gravity="start|top"
            android:padding="0dp"
            style="@style/editTextOnlyRead" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMaquinaShowBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_x2"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/cont_desc_fab_nav_back"
        app:tint="@color/fab_fore_gre108"
        app:backgroundTint="@color/fab_back_gre101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMaquinaShowUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_x2"
        android:src="@drawable/ic_edit"
        android:contentDescription="@string/cont_desc_fab_nav_update"
        app:tint="@color/fab_fore_gre108"
        app:backgroundTint="@color/fab_back_gre101"
        app:layout_constraintStart_toEndOf="@id/fabMaquinaShowBack"
        app:layout_constraintEnd_toStartOf="@id/fabMaquinaShowDelete"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMaquinaShowDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_x2"
        android:src="@drawable/ic_delete"
        android:contentDescription="@string/cont_desc_fab_nav_delete"
        app:tint="@color/fab_fore_gre108"
        app:backgroundTint="@color/fab_back_gre101"
        app:layout_constraintStart_toEndOf="@id/fabMaquinaShowUpdate"
        app:layout_constraintEnd_toStartOf="@id/fabMaquinaShowHome"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMaquinaShowHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_x2"
        android:src="@drawable/ic_home"
        android:contentDescription="@string/cont_desc_fab_nav_home"
        app:tint="@color/fab_fore_gre108"
        app:backgroundTint="@color/fab_back_gre101"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>