<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutMoldeForm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_x1"
    android:background="@drawable/bg_main">

    <TextView
        android:id="@+id/txvMoldeFormHeader"
        style="@style/headers"
        android:layout_marginTop="@dimen/margin_x1"
        android:text="@string/header_molde_form"
        app:layout_constraintBottom_toTopOf="@+id/tilMoldeFormNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMoldeFormNombre"
        android:layout_width="@dimen/widthTil_x6"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_x6"
        android:hint="@string/property_nombre"
        android:textColorHint="@color/lab_fore_gre106"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="outline"
        app:hintTextAppearance="@style/MyHintAppearance"
        app:hintTextColor="@color/purple_200"
        app:layout_constraintBottom_toTopOf="@+id/tilMoldeFormRef"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvMoldeFormHeader">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtMoldeFormNombre"
            style="@style/edtOnMoldeMaquinaForm" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMoldeFormRef"
        android:layout_width="@dimen/widthTil_x6"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_x2"
        android:hint="@string/property_referencia"
        android:textColorHint="@color/lab_fore_gre106"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="outline"
        app:hintTextAppearance="@style/MyHintAppearance"
        app:hintTextColor="@color/purple_200"
        app:layout_constraintBottom_toTopOf="@+id/tilMoldeFormDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilMoldeFormNombre">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtMoldeFormRef"
            style="@style/edtOnMoldeMaquinaForm" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMoldeFormDesc"
        android:layout_width="@dimen/widthTil_x6"
        android:layout_height="@dimen/heightDesc_til"
        android:layout_marginTop="@dimen/margin_x2"
        android:hint="@string/property_descripcion"
        android:textColorHint="@color/lab_fore_gre106"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="outline"
        app:hintTextAppearance="@style/MyHintAppearance"
        app:hintTextColor="@color/purple_200"
        app:layout_constraintBottom_toTopOf="@+id/btnMoldeFormNew"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilMoldeFormRef">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtMoldeFormDesc"
            style="@style/edtOnMoldeMaquinaForm"
            android:gravity="start|top"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnMoldeFormNew"
        style="@style/Widget.App.Button.MainMenu"
        android:layout_marginTop="@dimen/margin_x6"
        android:text="@string/btn_text_guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilMoldeFormDesc" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMoldeFormBack"
        style="@style/Widget.App.FloatingActionButton"
        android:src="@drawable/ic_list"
        android:contentDescription="@string/cont_desc_fab_nav_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMoldeFormHome"
        style="@style/Widget.App.FloatingActionButton"
        android:src="@drawable/ic_home"
        android:contentDescription="@string/cont_desc_fab_nav_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>